本地运行修改配置及添加运行注释